--- a/src/SassFiles/main.scss
+++ b/src/SassFiles/main.scss
@@ -3,6 +3,7 @@
 @import 'body';
 @import 'animation';
 @import 'footer';
+@import 'backgroundAnimation';
 
 $color1: #4cd7f4;
 $color2: #00a8d6;
@@ -31,5 +32,8 @@ $picsize: 50px;
       color:#fcfcd4;
     }
   }
+
+
+
 
 
